--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -13,6 +13,21 @@ spring.datasource.password=1234
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.type-aliases-package=com.icia.board.dto
 
+# email setting
+spring.mail.host=smtp.naver.com
+spring.mail.port=465
+spring.mail.username=tiblo
+spring.mail.password=naver_password
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.auth.connectiontimeout=5000
+spring.mail.properties.mail.smtp.auth.timeout=5000
+spring.mail.properties.mail.smtp.auth.writetimeout=5000
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+
+
 
 
 
