--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -16,8 +16,8 @@ mybatis.type-aliases-package=com.icia.board.dto
 # email setting
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
-spring.mail.username=tiblo
-spring.mail.password=naver_password
+spring.mail.username=@naver.com
+spring.mail.password=password
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.enable.required=true
 spring.mail.properties.mail.smtp.auth=true
